# example

./: .gitignore  CMakeLists.txt  makefile  readme.md
res/cmake/: tzdata.cmake  tzdata.cpp
src/: benchmark.cpp  main.cpp
src/application/: common.hpp  random.cpp  random.hpp  report.cpp  report.hpp
src/benchmarks/: random.cpp
src/tests/: random.cpp
